<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/backgroud"
    android:layout_height="match_parent"
    tools:context=".StatusFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/Status"
            android:textColor="@color/GreenTextTitle"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle"
            android:gravity="center|start"
            android:paddingStart="20dp"
            android:text="@string/Led_on_off"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgLed1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/sec_led_status"></ImageView>

                <ImageView
                    android:id="@+id/imgLed2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:background="@drawable/sec_led_status"></ImageView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="50dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/led1_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/led1"></TextView>
                <TextView
                    android:id="@+id/led2_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/led2"></TextView>
            </LinearLayout>


        </LinearLayout>
        <TextView
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle"
            android:gravity="center|start"
            android:paddingStart="20dp"
            android:text="@string/Control_bt"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center|top"
            android:orientation="vertical">

                <Switch
                    android:id="@+id/switch_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:ignore="TouchTargetSizeCheck">

                </Switch>


            <TextView
                    android:id="@+id/tv_button"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="OFF/ON">

                </TextView>

            <SeekBar
                android:id="@+id/control_blink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                 />

            <TextView
                android:id="@+id/tv_freg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/LED1_blink_cycle_control">

            </TextView>

            <SeekBar
                android:id="@+id/control_blink2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="50dp"
                 />

            <TextView
                android:id="@+id/tv_freg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"

                android:text="@string/LED2_blink_cycle_control">

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"

                android:layout_marginHorizontal="35dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>